--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,13 @@
 #spring.datasource.password=1234
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #
+
+
+
+server.port = 8082
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/employeecrud
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+spring.jpa.show-sql=true
